--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carica profilo</title>
+  <title>Galleria Profili - Modifica</title>
   <style>
     body {
       font-family: sans-serif;
@@ -13,7 +13,7 @@
     h1 {
       text-align: center;
     }
-    form {
+    form, .edit-form {
       max-width: 400px;
       margin: auto;
       display: flex;
@@ -29,11 +29,11 @@
       font-size: 1rem;
     }
     .gallery {
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       gap: 1rem;
       margin-top: 3rem;
-      justify-content: center;
+      justify-items: center;
     }
     .profile {
       text-align: center;
@@ -72,9 +72,10 @@
         const div = document.createElement('div');
         div.className = 'profile';
         div.innerHTML = `
-          <img src="https://galleria-profilo.onrender.com${profile.imageUrl}" alt="${profile.name}" />
-          <div>${profile.name}</div>
+          <img src="${profile.imageUrl}" alt="${profile.name}" />
+          <div><strong>${profile.name}</strong></div>
           <div>${profile.birthdate}</div>
+          <button onclick="editProfile('${profile.id}', '${profile.name}', '${profile.birthdate}')">Modifica</button>
         `;
         gallery.appendChild(div);
       });
@@ -94,6 +95,30 @@
         alert('Errore durante il caricamento.');
       }
     });
+
+    async function editProfile(id, currentName, currentDate) {
+      const name = prompt("Modifica nome:", currentName);
+      const birthdate = prompt("Modifica data di nascita (YYYY-MM-DD):", currentDate);
+      const fileInput = document.createElement('input');
+      fileInput.type = 'file';
+      fileInput.accept = 'image/*';
+      fileInput.onchange = async () => {
+        const formData = new FormData();
+        formData.append('name', name);
+        formData.append('birthdate', birthdate);
+        formData.append('image', fileInput.files[0]);
+        const res = await fetch(\`https://galleria-profilo.onrender.com/profiles/\${id}\`, {
+          method: 'PUT',
+          body: formData
+        });
+        if (res.ok) {
+          fetchProfiles();
+        } else {
+          alert("Errore durante la modifica.");
+        }
+      };
+      fileInput.click();
+    }
 
     fetchProfiles();
   </script>
