--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <style>
     body {
       font-family: sans-serif;
-      padding: 2rem;
-      background: #f9f9f9;
+      margin: 2rem;
     }
     h1 {
       text-align: center;
@@ -19,13 +18,9 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      background: #fff;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     input, button {
-      padding: 0.75rem;
+      padding: 0.5rem;
       font-size: 1rem;
     }
     .gallery {
@@ -37,40 +32,34 @@
     }
     .profile {
       text-align: center;
-      background: white;
-      border-radius: 10px;
-      padding: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      max-width: 200px;
     }
     .profile img {
-      width: 100%;
-      border-radius: 10px;
+      max-width: 100%;
+      height: auto;
+      border-radius: 0.5rem;
     }
   </style>
 </head>
 <body>
   <h1>Carica un nuovo profilo</h1>
-  <form id="uploadForm">
-    <input type="text" name="name" placeholder="Nome e Cognome" required>
-    <input type="date" name="birthdate" required>
-    <input type="file" name="image" accept="image/*" required>
+  <form id="profile-form">
+    <input type="text" name="name" placeholder="Nome" required />
+    <input type="date" name="birthdate" required />
+    <input type="file" name="image" accept="image/*" required />
     <button type="submit">Carica</button>
   </form>
 
   <div class="gallery" id="gallery"></div>
 
   <script>
-    const form = document.getElementById('uploadForm');
-    const gallery = document.getElementById('gallery');
-
     async function fetchProfiles() {
-      const res = await fetch('https://galleria-profilo.onrender.com/profiles');
-      const data = await res.json();
-      gallery.innerHTML = '';
-      data.forEach(profile => {
-        const div = document.createElement('div');
-        div.className = 'profile';
+      const res = await fetch("https://galleria-profilo.onrender.com/profiles");
+      const profiles = await res.json();
+      const gallery = document.getElementById("gallery");
+      gallery.innerHTML = "";
+      profiles.forEach(profile => {
+        const div = document.createElement("div");
+        div.className = "profile";
         div.innerHTML = `
           <img src="${profile.imageUrl}" alt="${profile.name}" />
           <div><strong>${profile.name}</strong></div>
@@ -81,34 +70,37 @@
       });
     }
 
-    form.addEventListener('submit', async e => {
+    document.getElementById("profile-form").addEventListener("submit", async (e) => {
       e.preventDefault();
+      const form = e.target;
       const formData = new FormData(form);
-      const res = await fetch('https://galleria-profilo.onrender.com/upload', {
-        method: 'POST',
+
+      const res = await fetch("https://galleria-profilo.onrender.com/profiles", {
+        method: "POST",
         body: formData
       });
+
       if (res.ok) {
-        form.reset();
         fetchProfiles();
+        form.reset();
       } else {
-        alert('Errore durante il caricamento.');
+        alert("Errore durante il caricamento del profilo.");
       }
     });
 
     async function editProfile(id, currentName, currentDate) {
       const name = prompt("Modifica nome:", currentName);
       const birthdate = prompt("Modifica data di nascita (YYYY-MM-DD):", currentDate);
-      const fileInput = document.createElement('input');
-      fileInput.type = 'file';
-      fileInput.accept = 'image/*';
+      const fileInput = document.createElement("input");
+      fileInput.type = "file";
+      fileInput.accept = "image/*";
       fileInput.onchange = async () => {
         const formData = new FormData();
-        formData.append('name', name);
-        formData.append('birthdate', birthdate);
-        formData.append('image', fileInput.files[0]);
-        const res = await fetch(\`https://galleria-profilo.onrender.com/profiles/\${id}\`, {
-          method: 'PUT',
+        formData.append("name", name);
+        formData.append("birthdate", birthdate);
+        formData.append("image", fileInput.files[0]);
+        const res = await fetch(`https://galleria-profilo.onrender.com/profiles/${id}`, {
+          method: "PUT",
           body: formData
         });
         if (res.ok) {
