--- a/index.html
+++ b/index.html
@@ -3,26 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galleria Profili - Modifica</title>
+  <title>Galleria Profili - Party Edition</title>
   <style>
     body {
       font-family: sans-serif;
       margin: 2rem;
+      animation: rainbow 10s infinite linear;
+      background-size: 400% 400%;
+      position: relative;
+      overflow-x: hidden;
     }
+
+    @keyframes rainbow {
+      0% { background-color: #ff0000; }
+      20% { background-color: #ffa500; }
+      40% { background-color: #ffff00; }
+      60% { background-color: #00ff00; }
+      80% { background-color: #0000ff; }
+      100% { background-color: #8a2be2; }
+    }
+
     h1 {
       text-align: center;
+      color: white;
+      text-shadow: 2px 2px 5px black;
     }
+
     form, .edit-form {
       max-width: 400px;
       margin: auto;
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 1rem;
+      border-radius: 1rem;
     }
+
     input, button {
       padding: 0.5rem;
       font-size: 1rem;
     }
+
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -30,18 +52,45 @@
       margin-top: 3rem;
       justify-items: center;
     }
+
     .profile {
       text-align: center;
+      background: rgba(255, 255, 255, 0.85);
+      padding: 1rem;
+      border-radius: 1rem;
+      box-shadow: 0 0 10px #00000055;
     }
+
     .profile img {
       max-width: 100%;
       height: auto;
       border-radius: 0.5rem;
     }
+
+    /* Dancing GIFs */
+    .gif-bg {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100vw;
+      z-index: -1;
+      pointer-events: none;
+    }
+
+    .gif-bg img {
+      height: 150px;
+      margin: 0 20px;
+      animation: float 4s infinite ease-in-out;
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-15px); }
+    }
   </style>
 </head>
 <body>
-  <h1>Carica un nuovo profilo</h1>
+  <h1>🎉 Galleria Profili Party 🎉</h1>
   <form id="profile-form">
     <input type="text" name="name" placeholder="Nome" required />
     <input type="date" name="birthdate" required />
@@ -50,6 +99,13 @@
   </form>
 
   <div class="gallery" id="gallery"></div>
+
+  <!-- Dancing GIFs background -->
+  <div class="gif-bg">
+    <img src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" alt="Snoop dancing">
+    <img src="https://media.giphy.com/media/ICOgUNjpvO0PC/giphy.gif" alt="Party dance">
+    <img src="https://media.giphy.com/media/LmNwrBhejkK9EFP504/giphy.gif" alt="Pikachu dance">
+  </div>
 
   <script>
     async function fetchProfiles() {
@@ -65,6 +121,7 @@
           <div><strong>${profile.name}</strong></div>
           <div>${profile.birthdate}</div>
           <button onclick="editProfile('${profile.id}', '${profile.name}', '${profile.birthdate}')">Modifica</button>
+          <button onclick="deleteProfile('${profile.id}')">❌ Cancella</button>
         `;
         gallery.appendChild(div);
       });
@@ -110,6 +167,19 @@
         }
       };
       fileInput.click();
+    }
+
+    async function deleteProfile(id) {
+      if (confirm("Sei sicuro di voler cancellare questo profilo?")) {
+        const res = await fetch(`https://galleria-profilo.onrender.com/profiles/${id}`, {
+          method: "DELETE"
+        });
+        if (res.ok) {
+          fetchProfiles();
+        } else {
+          alert("Errore durante la cancellazione.");
+        }
+      }
     }
 
     fetchProfiles();
